Adjusting device position to prevent viewport overflow

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -82,7 +82,7 @@
 
     #device{
       position: absolute;
-      right: -22px;
+      right: -10px;
       bottom: -128px;
       transform: scale(1);
     }
